* Increased initial and max memory, and max perm gen size, in run.sh. * Fixed issue in AmazonS3ClientFactory.